# easylog

./: CMakeLists.txt  build.ps1  build.sh
include/: easylog.hpp
test/: CMakeLists.txt  test.cpp
